# agno-agent-starter

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  configuration.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.cursor/rules/: agents.mdc  global.mdc  models.mdc  teams.mdc  workflows.mdc
.github/workflows/: ci.yml
api/: README.md  README_CN.md  openapi.json
app/: __init__.py  config.py  main.py
app/agents/: .gitkeep  README.md  README_EN.md  __init__.py  guards.py
app/agents/github_analyzer/: README.md  __init__.py  agent.py  prompts.py  schemas.py
app/agents/knowledge_rag/: __init__.py  agent.py  prompts.py
app/agents/structured_output/: __init__.py  agent.py  prompts.py  schemas.py
app/core/: __init__.py  registry.py
app/hooks/: README.md  __init__.py  config.py  registry.py
app/hooks/builtin/: __init__.py  content_safety.py  llm_invocation_guard.py  output_validator.py  pii_filter.py  token_budget_guard.py  tool_call_guard.py
app/mcp/: __init__.py
app/mcp/devtools/: README.md  __init__.py  config.py  server.py  tools.py
app/models/: README.md  README_EN.md  __init__.py  config.py  factory.py  features.py  pricing.py  provider_registry.py  registry.py  variants.py
app/models/adapters/: __init__.py  base.py  dashscope.py  gateway.py  native.py  volcengine.py
app/models/providers/: __init__.py  anthropic.py  dashscope.py  google.py  guarded.py  litellm.py  ollama.py  openai.py  openrouter.py  volcengine.py
app/teams/: README.md  README_EN.md  __init__.py  _example_team.py
app/teams/deep_research/: README.md  __init__.py  agents.py  schemas.py  team.py
app/teams/research_team/: __init__.py  schemas.py  team.py
app/tools/: README.md  __init__.py  config.py  registry.py
app/tools/builtin/: __init__.py  http_client.py  tavily.py  web_search.py
app/tools/mcp/: __init__.py  client.py
app/workflows/: README.md  README_EN.md  __init__.py  _example_workflow.py
app/workflows/content_pipeline/: __init__.py  schemas.py  workflow.py
app/workflows/customer_service/: README.md  __init__.py  schemas.py  steps.py  workflow.py
data/: customer_service_faq.json
scripts/: AGNO_CLI.md  agno  dev.sh  export_openapi.py  init_knowledge_base.py  prod.sh  verify_setup.py
tests/: __init__.py  test_agents.py  test_config.py  test_models.py  test_teams.py  test_workflows.py
tests/agents/: test_github_analyzer.py
tests/core/: __init__.py  test_registry.py
tests/hooks/: __init__.py  test_registry.py
tests/mcp/: __init__.py
tests/mcp/devtools/: __init__.py  test_tools.py
tests/teams/: __init__.py  test_deep_research.py
tests/tools/: __init__.py  test_registry.py
tests/workflows/: test_customer_service.py
