[project]
name = "agno-agent-starter"
version = "1.0.0"
description = "Production-ready AI Agent scaffold with AgentOS | 8 model providers | Teams & Workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Linhai", email = "linhai0872@users.noreply.github.com" }]
keywords = ["agno", "agent", "ai", "llm", "agentos", "workflow", "multi-agent", "openrouter", "scaffold"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/linhai0872/agno-agent-starter"
Documentation = "https://github.com/linhai0872/agno-agent-starter#readme"
Repository = "https://github.com/linhai0872/agno-agent-starter"

# ===========================================
# 开发工具配置
# ===========================================

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["app"]
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
    # 暂时排除有复杂类型问题的文件 (将在 Epic 7 处理)
    "app/models/providers/**",
    "app/models/factory.py",
    "app/models/config.py",
    "app/tools/builtin/**",
    "app/tools/config.py",
]
reportMissingImports = "warning"
reportMissingTypeStubs = false

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyright>=1.1.380",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

